# well

./: Cargo.toml  README.md
src/: env.rs  error.rs  functions.rs  io.rs  main.rs  openai.rs
src/functions/: common.rs  list_commits.rs  list_files.rs  query_ast.rs  read_file.rs  show_commit.rs
src/io/: throbber.rs
src/openai/: error.rs  prompts.rs  rollup.rs  schema.rs  types.rs  vec_of_messages.rs
