[package]
name = "well"
description = "chat with your codebase"
readme = "README.md"
repository = "https://github.com/xhjkl/well"
license = "MIT"
version = "0.0.2"
edition = "2021"
resolver = "2"

[dependencies]
colored = "2.1.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
git2 = { version = "0.18.3", features = ["vendored-libgit2", "vendored-openssl"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

tree-sitter = "0.22.6"
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.21.2"
tree-sitter-typescript = "0.21.1"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true
