[package]
name = "well"
description = "chat with your codebase"
readme = "README.md"
repository = "https://github.com/xhjkl/well"
license = "MIT"
version = "0.0.4"
edition = "2021"
resolver = "2"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
dotenvy = "0.15.7"
git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }
monostate = "0.1.13"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }

tree-sitter = "0.22.6"
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.21.2"
tree-sitter-typescript = "0.21.2"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true
